# creations_builder_r1

./: GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
creations_builder/: __init__.py  app.py  cli.py
creations_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
creations_builder/api/: __init__.py  export.py  templates.py
creations_builder/blocks/: __init__.py  registry.py
static/css/: blockly-theme.css  main.css
static/js/: blockly-config.js  code-generator.js  custom-blocks.js  emulator-shim.js  export.js  main.js  preview.js  templates.js
templates/: index.html
templates/exports/: r1_creation_template.html
